Ensure chrome watcher exits cleanly on unexpected errors

This mirrors what the installer does.
https://cs.chromium.org/chromium/src/chrome/installer/setup/setup_main.cc?l=1367

BUG=699983

Review-Url: https://codereview.chromium.org/2737263004
Cr-Commit-Position: refs/heads/master@{#455814}